--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <string name="plus_facebook">+   Facebook</string>
 
-    <!--flat card-->
+    <!--apartment card-->
     <string name="profile_flat_point">.</string>
     <string name="profile_flat_browsings">Просмотров:</string>
     <string name="profile_flat_new_browsings">Новых:</string>
